--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root{
-    --cor-fundo: #01080E ;
-    --cor-principal: #0B0D20 ;
-    --cor-secundaria: #212333; 
-    --cor-destaque: #2BDEFD;
-    --cor-texto: #D7F9FF;
+    --cor-fundo: #ff00ea ;
+    --cor-principal: #ffa5f4 ;
+    --cor-secundaria: #ff0088; 
+    --cor-destaque: #fd2b2b;
+    --cor-texto: #d7f9ff00;
 
 }
 
