--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --cor-principal: #ffa5f4 ;
     --cor-secundaria: #ff0088; 
     --cor-destaque: #fd2b2b;
-    --cor-texto: #d7f9ff00;
+    --cor-texto: #1ee2ec;
 
 }
 
