--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root{
-    --cor-fundo: #ff00ea ;
-    --cor-principal: #ffa5f4 ;
-    --cor-secundaria: #ff0088; 
-    --cor-destaque: #fd2b2b;
-    --cor-texto: #1ee2ec;
+    --cor-fundo: #0000005b ;
+    --cor-principal: #ffa5f410 ;
+    --cor-secundaria: #070004fb; 
+    --cor-destaque: #2bd3fd;
+    --cor-texto: #f9f9f9;
 
 }
 
